src/test/resources/com/puppycrawl/tools/checkstyle/checks/javadoc/invalidjavadocposition/comment/package-info.java
/** violation */
/** valid */
// comment
package com.puppycrawl.tools.checkstyle.checks.javadoc.invalidjavadocposition.comment;
